# aiotimer

./: .gitignore  pyproject.toml  readme.md  test.py
.github/workflows/: qa.yaml  test.yaml
.tools/: flake8.ini  mypy.ini  pylint.ini  pyrefly.toml  pyright.json  pytest.ini  ruff.toml
examples/: example_01_one_off_timer.py  example_02_multi_interval_timer.py  example_03_error_handling.py  example_04_exponential_backoff.py  example_05_do_not_await_callbacks.py  example_06_do_await_callbacks.py  example_07_custom_duration_factory.py  example_99_asyncio_sleep_drift.py
sources/aiotimer/: __init__.py  multi_timer.py  timer.py  timer_interface.py
sources/aiotimer/callback/: __init__.py  abstract_executor.py  async_executor.py  callback.py  executor.py  executor_interface.py  on_error.py  on_interval_complete.py  on_timer_complete.py  sync_executor.py  user_callback.py
sources/aiotimer/duration/: __init__.py  duration.py  duration_adapter.py  duration_iterator.py
sources/aiotimer/error/: __init__.py  callback_error.py  configuration_error.py  duration_error.py  event_handler_error.py  generator_error.py  logic_error.py  precision_error.py  state_error.py  timer_error.py
tests/: __init__.py  conftest.py
tests/support/: __init__.py  callback.py  error.py  stopwatch.py
tests/timer/: test_constructor.py  test_drift.py  test_invalid_state.py  test_on_error.py  test_on_interval_complete.py  test_on_timer_complete.py  test_pause.py  test_prolong.py  test_reset.py  test_set.py  test_shorten.py  test_start.py  test_state.py  test_view.py  test_view_state.py
(+194 files in other folders)
